# LIBZHttpClient-NET

./: .gitignore  LIBZHttpClient.csproj  LIBZHttpClient.sln  Makefile.am  autogen.sh  configure.ac  libzhttpclient.pc.in
src/: AssemblyInfo.cs.in  Instrument.cs  LIBZHttpClient.cs  Makefile.am
test/: Test.cs  test.csproj
